# lvgl_v8_template_ili9341

./: .gitignore  README.md  sdkconfig.old
main/: CMakeLists.txt  main.c
main/gui_task/: gui_app.c  gui_task.c  gui_task.h
main/gui_task/assets/: icons_20.c
main/gui_task/copy/: copy.c  copy.h
main/gui_task/menu/: menu.c  menu.h
